--- a/home.css
+++ b/home.css
@@ -94,7 +94,7 @@
  .fav-btn {
 margin:auto;
 height: 50px;
-}
+} 
 
 
   .fav-btn img{
@@ -102,11 +102,45 @@ height: 50px;
     height: 1.5rem;
   }  */
 
+body{
+  background: #121212;
+}
+
+#search-bar{
+  margin-left: 20vw;
+  display: flex;
+  align-items: center;
+}
+
+#search-bar h1{
+  font-size: 22px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  background-color: #f4c518;
+  padding: 5px 8px 5px 8px;
+  border-radius: 5px;
+}
+
+#search-bar input{
+  margin-left: 20px;
+  height: 30px;
+  width: 700px;
+  border: 5px;
+}
+
+#category-title{
+  margin-top: 5vh;
+  margin-left: 20vw;
+  color:#f4c518;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
   #movies-grid{
   display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 20px;
+    color: white;
+    width: 60%;
+    margin: 2rem 15rem;
   }
 
 
@@ -115,8 +149,24 @@ height: 50px;
   
 }
 .movie-card{
-  border: 2px solid red;
-
+  /* border: 2px solid red; */
+  
+background: #1a1a1a;
+border-radius: 10px;
 }
 
+
+.movie-card h1{
+  padding-left:10px ;
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: lighter;
+}
+
+.movie-card  p{
+  padding-left: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+ 
+  color: lightgray;
+}
 
