added fav body onload func to load content of fav movie list

--- a/HomePage.css
+++ b/HomePage.css
@@ -119,3 +119,14 @@ main{
       color: red;
 }
 
+.main{
+      width: 75%;
+      margin: 30px auto;
+}
+
+.fav-container{
+      /* justify-content: space-between; */
+      flex-wrap: wrap;
+  
+      
+}
