--- a/HomePage.css
+++ b/HomePage.css
@@ -6,19 +6,37 @@
       padding: 0;
       box-sizing: border-box;
 }
-
-
-nav{
-      /* position: fixed; */
-      
-      background-color: #183D3D;
+body{
+      animation: fadeInAnimation ease 2s;
+      background-color: #f5f5f5;
+      animation-iteration-count: 1;
+      animation-fill-mode: forwards;
+}
+@keyframes fadeInAnimation {
+      0% {
+          opacity: 0;
+      }
+  
+      100% {
+          opacity: 1;
+      }
+  }
+  
+#nav{
+      position: fixed;
+      /* border: 2px solid red; */
+      background-color: #88cfcf;
       overflow: hidden;
+      width: 100%;
+      top: 0;
+      z-index: 3;
+      min-width: 445px;
 }
 
-.nav-bar{
+/* .nav-bar{
       justify-content: space-between;
       align-items: center;
-}
+} */
 
 
 
@@ -29,8 +47,12 @@ nav{
 
 .search-input{
       padding: 3px 50px;
-      font-size: 17px;
+      font-size: 18px;
+      width: 400px;
      
+}
+.search-input:focus{
+      outline: none;
 }
 .search-bar span{
       
@@ -39,14 +61,17 @@ nav{
    top: 0;
 }
 
+/* favorite button */
 .button{
-
-    
-      padding: 3px 13px;
-      background-color: #93B1A6;
+      
+      padding: 4px 15px;
+      background-color: #476b5e;
       border-radius: 10px;
-      font-size: 17px;
+      font-size: 20px;
 
+}
+.button:hover {
+      scale: 1.1;
 }
 .button a{
       text-decoration: none;
@@ -54,20 +79,20 @@ nav{
 }
 
 
-main{
+#main{
       padding-block: 20px;
       margin-top: 80px;
   }
   
 
-  .cards-container{
+.cards-container{
       justify-content: space-evenly;
       flex-wrap: wrap;
       /* align-items: start ; */
 }
 
 .card{
-      width: 300px;
+     width: 300px;
       margin: 20px 30px ;
       min-height: 400px;
       box-shadow: 0 0 4px #d4ecd4;
@@ -84,49 +109,38 @@ main{
       background-color: #f9fdff;
       transform: translateY(-2px);
 }
-/* .card-header img{
-      width: 100%;
-     
-} */
-.card-content{
-      padding: 12px;
+.card a{
+      text-decoration: none;
 }
-.news-source{
-      margin-block:12px; 
+
+.card p{
+      color: black;
 }
-.card img{
-      width: 100%;
-      height:100%;
-      object-fit: cover;
-}
-.card h1{
-      font-size: 25px;
-      margin:  10px;
+
+.heading{
+      color:black;
+      margin: 5px 10px;
+      
 }
 .card-info{
       display: flex;
       justify-content: space-between;
-      margin:  10px;
+      margin: 5px 10px 0 10px;
       align-items: baseline;
-      /* border: 2px solid red; */
+     
 }
+
 .card-info i:active{
     color: red;
       
       
 }
-.fav-icon{
-      color: red;
-}
 
-.main{
-      width: 75%;
-      margin: 30px auto;
-}
-
-.fav-container{
-      /* justify-content: space-between; */
-      flex-wrap: wrap;
-  
-      
-}
+@media screen and (max-width: 767px) {
+     
+      .navbar .collapse{
+          
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+    }}
