--- a/favorite.css
+++ b/favorite.css
@@ -1,13 +1,148 @@
-*{
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-/* 
-.banner {
-      background-image: url("./assets/theaterImg.jpg");
-      object-fit: cover;
-      background-repeat: no-repeat;
-      width: 100vw;
-      height: 50vh;
-} */
+
+.banner{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 2%;
+    background-color: #d4ecff;
+    align-items: center;
+}
+.btn a{
+    color: white;
+    text-decoration: none;
+}
+
+/* Movie Container */
+
+.movie-container {
+  width: 50%;
+  background-color: white;
+  padding: 20px;
+  margin: 0px auto;
+  display: flex;
+  flex-direction: row;
+  border-radius: 5px;
+  box-shadow: 1px 2px #a1a1a1;
+}
+.movie-content {
+  display: flex;
+}
+
+.movie-poster {
+  width: 50%;
+}
+
+.movie-poster img {
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+}
+
+.movie-details {
+  width: 100%;
+  padding: 0px 10px 0px 20px;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+}
+
+.details-header {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.dh-ls {
+  width: 87%;
+}
+
+.dh-rs {
+  text-align: right;
+  width: 10%;
+  padding: 5px 0px 0px 0px;
+}
+.dh-rs:active {
+  color: red;
+}
+
+.details-header h1 {
+  padding-bottom: 0px;
+}
+
+.italics-text {
+  font-size: 15px;
+  color: #555;
+}
+
+.details-ul {
+  list-style-type: none;
+  padding-left: 0px;
+  font-size: 15px;
+  margin-top: 10px;
+}
+
+/* favrouite */
+
+.main {
+  padding: 20px 0 20px 0;
+  margin-top: 5%;
+}
+
+.cards-container {
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.card {
+  width: 200px;
+  margin: 20px 30px;
+  height: 300px;
+  box-shadow: 0 0 4px #d4ecd4;
+  border-radius: 4px;
+  cursor: pointer;
+  background-color: #fff;
+  overflow: hidden;
+  transform: all 0.3s ease;
+}
+.card-poster a img {
+  width: 100%;
+  height: 100%;
+}
+.card:hover {
+  box-shadow: 1px 1px 8px #d4ecff;
+  background-color: #f9fdff;
+  transform: translateY(-2px);
+}
+.card a {
+  text-decoration: none;
+}
+
+.card p {
+  color: black;
+}
+
+.heading {
+  color: black;
+  margin: 5px 10px;
+}
+.card-info {
+  display: flex;
+  justify-content: space-between;
+  margin: 5px 10px 0 10px;
+  align-items: baseline;
+}
+
+.card-info i:active {
+  color: red;
+}
+
+.fav-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-self: auto;
+  margin: 0 10%;
+}
