--- a/HomePage.css
+++ b/HomePage.css
@@ -24,7 +24,7 @@ body{
   
 #nav{
       position: fixed;
-      /* border: 2px solid red; */
+     
       background-color: #88cfcf;
       overflow: hidden;
       width: 100%;
@@ -33,10 +33,6 @@ body{
       min-width: 445px;
 }
 
-/* .nav-bar{
-      justify-content: space-between;
-      align-items: center;
-} */
 
 
 
@@ -79,6 +75,8 @@ body{
 }
 
 
+/* movie card */
+
 #main{
       padding-block: 20px;
       margin-top: 80px;
@@ -88,7 +86,7 @@ body{
 .cards-container{
       justify-content: space-evenly;
       flex-wrap: wrap;
-      /* align-items: start ; */
+     
 }
 
 .card{
